Fix reflection calls for tests